--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CampusExpenes</string>
+    <string name="vinh_dep_trai">Vinh Dep Trai</string>
+    <string name="enter_text">Enter Text</string>
+    <string name="username">Username</string>
+    <string name="pass">Password</string>
+    <string name="password">Password</string>
+    <string name="txtusername">Username</string>
 </resources>
